--- a/.gitattributes
+++ b/.gitattributes
@@ -2,4 +2,4 @@
 *.cmd text eol=crlf
 
 # Ignore duplicated code in frontend and mobile for GitHub Linguist stats
-mobile/* linguist-vendored
+mobile/** linguist-vendored
